--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "mongoose": "^5.2.8"
+    "mongoose": "^5.2.8",
+    "mongoose-unique-validator": "^2.0.1"
   }
 }
